--- a/views/booking_view.xml
+++ b/views/booking_view.xml
@@ -7,6 +7,7 @@
                 <field name="partner_id"/>
                 <field name="name"/>
                 <field name="mobile"/>
+                <field name="partner_type"/>
                 <field name="start_date"/>
                 <field name="end_date"/>
                 <field name="state"/>
@@ -25,7 +26,8 @@
                 <sheet>
                     <group>
                         <group>
-                            <field name="partner_id"/>                    
+                            <field name="partner_id"/>      
+                            <field name="partner_type"/>    
                             <field name="name" readonly="1"/>
                             <field name="mobile" readonly="1"/>
                         </group>
