--- a/views/booking_view.xml
+++ b/views/booking_view.xml
@@ -36,6 +36,10 @@
                             <field name="end_date"/>
                         </group>
                         <group>
+                            <field name="number_of_people"/>
+                            <field name="age_range"/>
+                        </group>
+                        <group>
                             <field name="description" widget="text" placeholder="Description"/>
                         </group>
                     </group>
