--- a/views/booking_view.xml
+++ b/views/booking_view.xml
@@ -22,6 +22,7 @@
         <field name="arch" type="xml">
             <form string="Booking Form">
                 <header>
+                    <button name="action_send_invoice" type="object" string="Send Invoice" class="btn-primary"/>
                     <field name="state" widget="statusbar" options="{'clickable': '1'}"/>
                 </header>
                 <sheet>
